// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test PaymentOption create 1`] = `
Array [
  <Text
    style={
      Array [
        Object {
          "color": "#000000",
          "fontFamily": "SFProDisplay-Semibold",
          "fontSize": 16,
          "lineHeight": 24,
          "textAlign": "left",
          "textDecorationLine": "none",
        },
        Object {
          "marginBottom": 8,
          "marginLeft": 16,
        },
      ]
    }
  >
    Thời gian thanh toán
  </Text>,
  <View
    style={
      Object {
        "marginHorizontal": 16,
      }
    }
  >
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "flexDirection": "row",
          "opacity": 1,
          "overflow": "hidden",
          "paddingVertical": 16,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "borderColor": "#D9D9D9",
            "borderRadius": 8,
            "borderWidth": 1,
            "height": 16,
            "justifyContent": "center",
            "width": 16,
          }
        }
      />
      <View
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#262626",
                "fontFamily": "SFProDisplay-Regular",
                "fontSize": 16,
                "lineHeight": 24,
                "textAlign": "left",
                "textDecorationLine": "none",
              },
              Object {
                "flex": 1,
                "marginLeft": 8,
              },
            ]
          }
        >
          Thanh toán trước
          <Text
            style={
              Array [
                Object {
                  "color": "#595959",
                  "fontFamily": "SFProDisplay-Regular",
                  "fontSize": 14,
                  "lineHeight": 22,
                  "textAlign": "left",
                  "textDecorationLine": "none",
                },
                Object {},
              ]
            }
          >
            

Đặt chỗ của bạn sẽ được đảm bảo. Tuy nhiên trong trường hợp bạn muốn Huỷ đặt chỗ, bạn sẽ mất tiền phí đã thanh toán.
          </Text>
        </Text>
      </View>
      <Image
        source={
          Object {
            "uri": undefined,
          }
        }
        style={
          Object {
            "height": 30,
            "width": 30,
          }
        }
      />
      <View
        style={
          Object {
            "backgroundColor": "#E8E8E8",
            "bottom": 0,
            "height": 1,
            "marginLeft": 24,
            "position": "absolute",
            "width": "100%",
          }
        }
      />
    </View>
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "flexDirection": "row",
          "opacity": 1,
          "overflow": "hidden",
          "paddingVertical": 16,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "borderColor": "#D9D9D9",
            "borderRadius": 8,
            "borderWidth": 1,
            "height": 16,
            "justifyContent": "center",
            "width": 16,
          }
        }
      />
      <View
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#262626",
                "fontFamily": "SFProDisplay-Regular",
                "fontSize": 16,
                "lineHeight": 24,
                "textAlign": "left",
                "textDecorationLine": "none",
              },
              Object {
                "flex": 1,
                "marginLeft": 8,
              },
            ]
          }
        >
          Thanh toán sau
          <Text
            style={
              Array [
                Object {
                  "color": "#595959",
                  "fontFamily": "SFProDisplay-Regular",
                  "fontSize": 14,
                  "lineHeight": 22,
                  "textAlign": "left",
                  "textDecorationLine": "none",
                },
                Object {},
              ]
            }
          >
            

Bạn có thể đặt chỗ mà không cần thanh toán trước và chỉ cần thanh toán trước 10:15 AM 24/01/2021. Sau khoảng thời gian này, mã đặt chỗ của bạn sẽ bị huỷ tự động bởi hệ thống nếu không được thanh toán.
          </Text>
        </Text>
      </View>
      <Image
        source={
          Object {
            "uri": undefined,
          }
        }
        style={
          Object {
            "height": 30,
            "width": 30,
          }
        }
      />
      <View
        style={
          Object {
            "backgroundColor": "#E8E8E8",
            "bottom": 0,
            "height": 1,
            "marginLeft": 24,
            "position": "absolute",
            "width": "100%",
          }
        }
      />
    </View>
  </View>,
]
`;

exports[`Test PaymentOption create with display pay-now / pay-later option 1`] = `
Array [
  <Text
    style={
      Array [
        Object {
          "color": "#000000",
          "fontFamily": "SFProDisplay-Semibold",
          "fontSize": 16,
          "lineHeight": 24,
          "textAlign": "left",
          "textDecorationLine": "none",
        },
        Object {
          "marginBottom": 8,
          "marginLeft": 16,
        },
      ]
    }
  >
    Thời gian thanh toán
  </Text>,
  <View
    style={
      Object {
        "marginHorizontal": 16,
      }
    }
  >
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "flexDirection": "row",
          "opacity": 1,
          "overflow": "hidden",
          "paddingVertical": 16,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "borderColor": "#00979D",
            "borderRadius": 8,
            "borderWidth": 1,
            "height": 16,
            "justifyContent": "center",
            "width": 16,
          }
        }
      >
        <View
          style={
            Object {
              "backgroundColor": "#00979D",
              "borderRadius": 4,
              "height": 8,
              "width": 8,
            }
          }
        />
      </View>
      <View
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#262626",
                "fontFamily": "SFProDisplay-Regular",
                "fontSize": 16,
                "lineHeight": 24,
                "textAlign": "left",
                "textDecorationLine": "none",
              },
              Object {
                "flex": 1,
                "marginLeft": 8,
              },
            ]
          }
        >
          Thanh toán trước
          <Text
            style={
              Array [
                Object {
                  "color": "#595959",
                  "fontFamily": "SFProDisplay-Regular",
                  "fontSize": 14,
                  "lineHeight": 22,
                  "textAlign": "left",
                  "textDecorationLine": "none",
                },
                Object {},
              ]
            }
          >
            

Đặt chỗ của bạn sẽ được đảm bảo. Tuy nhiên trong trường hợp bạn muốn Huỷ đặt chỗ, bạn sẽ mất tiền phí đã thanh toán.
          </Text>
        </Text>
      </View>
      <Image
        source={
          Object {
            "uri": undefined,
          }
        }
        style={
          Object {
            "height": 30,
            "width": 30,
          }
        }
      />
      <View
        style={
          Object {
            "backgroundColor": "#E8E8E8",
            "bottom": 0,
            "height": 1,
            "marginLeft": 24,
            "position": "absolute",
            "width": "100%",
          }
        }
      />
    </View>
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "flexDirection": "row",
          "opacity": 1,
          "overflow": "hidden",
          "paddingVertical": 16,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "borderColor": "#D9D9D9",
            "borderRadius": 8,
            "borderWidth": 1,
            "height": 16,
            "justifyContent": "center",
            "width": 16,
          }
        }
      />
      <View
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#262626",
                "fontFamily": "SFProDisplay-Regular",
                "fontSize": 16,
                "lineHeight": 24,
                "textAlign": "left",
                "textDecorationLine": "none",
              },
              Object {
                "flex": 1,
                "marginLeft": 8,
              },
            ]
          }
        >
          Thanh toán sau
          <Text
            style={
              Array [
                Object {
                  "color": "#595959",
                  "fontFamily": "SFProDisplay-Regular",
                  "fontSize": 14,
                  "lineHeight": 22,
                  "textAlign": "left",
                  "textDecorationLine": "none",
                },
                Object {},
              ]
            }
          >
            

Bạn có thể đặt chỗ mà không cần thanh toán trước và chỉ cần thanh toán trước 10:15 AM 24/01/2021. Sau khoảng thời gian này, mã đặt chỗ của bạn sẽ bị huỷ tự động bởi hệ thống nếu không được thanh toán.
          </Text>
        </Text>
      </View>
      <Image
        source={
          Object {
            "uri": undefined,
          }
        }
        style={
          Object {
            "height": 30,
            "width": 30,
          }
        }
      />
      <View
        style={
          Object {
            "backgroundColor": "#E8E8E8",
            "bottom": 0,
            "height": 1,
            "marginLeft": 24,
            "position": "absolute",
            "width": "100%",
          }
        }
      />
    </View>
  </View>,
]
`;

exports[`Test PaymentOption create with display pay-now option 1`] = `
Array [
  <Text
    style={
      Array [
        Object {
          "color": "#000000",
          "fontFamily": "SFProDisplay-Semibold",
          "fontSize": 16,
          "lineHeight": 24,
          "textAlign": "left",
          "textDecorationLine": "none",
        },
        Object {
          "marginBottom": 8,
          "marginLeft": 16,
        },
      ]
    }
  >
    Thời gian thanh toán
  </Text>,
  <View
    style={
      Object {
        "marginHorizontal": 16,
      }
    }
  >
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "flexDirection": "row",
          "opacity": 1,
          "overflow": "hidden",
          "paddingVertical": 16,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "borderColor": "#00979D",
            "borderRadius": 8,
            "borderWidth": 1,
            "height": 16,
            "justifyContent": "center",
            "width": 16,
          }
        }
      >
        <View
          style={
            Object {
              "backgroundColor": "#00979D",
              "borderRadius": 4,
              "height": 8,
              "width": 8,
            }
          }
        />
      </View>
      <View
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#262626",
                "fontFamily": "SFProDisplay-Regular",
                "fontSize": 16,
                "lineHeight": 24,
                "textAlign": "left",
                "textDecorationLine": "none",
              },
              Object {
                "flex": 1,
                "marginLeft": 8,
              },
            ]
          }
        >
          Thanh toán trước
          <Text
            style={
              Array [
                Object {
                  "color": "#595959",
                  "fontFamily": "SFProDisplay-Regular",
                  "fontSize": 14,
                  "lineHeight": 22,
                  "textAlign": "left",
                  "textDecorationLine": "none",
                },
                Object {},
              ]
            }
          >
            

Đặt chỗ của bạn sẽ được đảm bảo. Tuy nhiên trong trường hợp bạn muốn Huỷ đặt chỗ, bạn sẽ mất tiền phí đã thanh toán.
          </Text>
        </Text>
      </View>
      <Image
        source={
          Object {
            "uri": undefined,
          }
        }
        style={
          Object {
            "height": 30,
            "width": 30,
          }
        }
      />
      <View
        style={
          Object {
            "backgroundColor": "#E8E8E8",
            "bottom": 0,
            "height": 1,
            "marginLeft": 24,
            "position": "absolute",
            "width": "100%",
          }
        }
      />
    </View>
  </View>,
]
`;

exports[`Test PaymentOption onSelect pay-now / pay-later option 1`] = `
Array [
  <Text
    style={
      Array [
        Object {
          "color": "#000000",
          "fontFamily": "SFProDisplay-Semibold",
          "fontSize": 16,
          "lineHeight": 24,
          "textAlign": "left",
          "textDecorationLine": "none",
        },
        Object {
          "marginBottom": 8,
          "marginLeft": 16,
        },
      ]
    }
  >
    Thời gian thanh toán
  </Text>,
  <View
    style={
      Object {
        "marginHorizontal": 16,
      }
    }
  >
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "flexDirection": "row",
          "opacity": 1,
          "overflow": "hidden",
          "paddingVertical": 16,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "borderColor": "#00979D",
            "borderRadius": 8,
            "borderWidth": 1,
            "height": 16,
            "justifyContent": "center",
            "width": 16,
          }
        }
      >
        <View
          style={
            Object {
              "backgroundColor": "#00979D",
              "borderRadius": 4,
              "height": 8,
              "width": 8,
            }
          }
        />
      </View>
      <View
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#262626",
                "fontFamily": "SFProDisplay-Regular",
                "fontSize": 16,
                "lineHeight": 24,
                "textAlign": "left",
                "textDecorationLine": "none",
              },
              Object {
                "flex": 1,
                "marginLeft": 8,
              },
            ]
          }
        >
          Thanh toán trước
          <Text
            style={
              Array [
                Object {
                  "color": "#595959",
                  "fontFamily": "SFProDisplay-Regular",
                  "fontSize": 14,
                  "lineHeight": 22,
                  "textAlign": "left",
                  "textDecorationLine": "none",
                },
                Object {},
              ]
            }
          >
            

Đặt chỗ của bạn sẽ được đảm bảo. Tuy nhiên trong trường hợp bạn muốn Huỷ đặt chỗ, bạn sẽ mất tiền phí đã thanh toán.
          </Text>
        </Text>
      </View>
      <Image
        source={
          Object {
            "uri": undefined,
          }
        }
        style={
          Object {
            "height": 30,
            "width": 30,
          }
        }
      />
      <View
        style={
          Object {
            "backgroundColor": "#E8E8E8",
            "bottom": 0,
            "height": 1,
            "marginLeft": 24,
            "position": "absolute",
            "width": "100%",
          }
        }
      />
    </View>
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "flexDirection": "row",
          "opacity": 1,
          "overflow": "hidden",
          "paddingVertical": 16,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "borderColor": "#D9D9D9",
            "borderRadius": 8,
            "borderWidth": 1,
            "height": 16,
            "justifyContent": "center",
            "width": 16,
          }
        }
      />
      <View
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#262626",
                "fontFamily": "SFProDisplay-Regular",
                "fontSize": 16,
                "lineHeight": 24,
                "textAlign": "left",
                "textDecorationLine": "none",
              },
              Object {
                "flex": 1,
                "marginLeft": 8,
              },
            ]
          }
        >
          Thanh toán sau
          <Text
            style={
              Array [
                Object {
                  "color": "#595959",
                  "fontFamily": "SFProDisplay-Regular",
                  "fontSize": 14,
                  "lineHeight": 22,
                  "textAlign": "left",
                  "textDecorationLine": "none",
                },
                Object {},
              ]
            }
          >
            

Bạn có thể đặt chỗ mà không cần thanh toán trước và chỉ cần thanh toán trước 10:15 AM 24/01/2021. Sau khoảng thời gian này, mã đặt chỗ của bạn sẽ bị huỷ tự động bởi hệ thống nếu không được thanh toán.
          </Text>
        </Text>
      </View>
      <Image
        source={
          Object {
            "uri": undefined,
          }
        }
        style={
          Object {
            "height": 30,
            "width": 30,
          }
        }
      />
      <View
        style={
          Object {
            "backgroundColor": "#E8E8E8",
            "bottom": 0,
            "height": 1,
            "marginLeft": 24,
            "position": "absolute",
            "width": "100%",
          }
        }
      />
    </View>
  </View>,
]
`;
